--- a/STAT_Q1/STAT_Q1.ipynb
+++ b/STAT_Q1/STAT_Q1.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Solution to \n",
+    "Question 01 : \n",
+    "Given historical data, your assignment is to build a predictive model to predict Straddle Open, High, Low, Close data for the next day. I.e. Today is Modnay (11-03-2024) and NIFTY expiry is on Thursday(14-03-2024). Tuesday(12-03-2024) being 2dte, we want to predict Open, High, Low, Close of Straddle prices (Not the index).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Importing Libraries"
    ]
   },
